# rag_project

./: .gitignore  README.md  agentic_rag.py  app.py  citations.py  pdf.py  pyproject.toml  rag.ipynb  rag.py  rag_fusion.py  requirements.txt  vectordb.py  visual.py
.streamlit/: config.toml  secrets.toml
experimented/: cy.py  te.py
