[project]
name = "rag-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cohere",
    "datashader>=0.19.1",
    "extra-streamlit-components",
    "graphviz",
    "ipython",
    "langchain",
    "langchain-cohere",
    "langchain-community",
    "langchain-core>=1.4.8",
    "langchain-experimental",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters",
    "langgraph",
    "liteparse>=2.1.1",
    "matplotlib",
    "numpy",
    "openai",
    "pacmap>=0.9.1",
    "pandas",
    "pillow>=12.2.0",
    "plotly",
    "qdrant-client>=1.18.0",
    "rank-bm25",
    "requests",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "streamlit",
    "streamlit-option-menu",
    "tavily-python",
    "umap-learn>=0.5.12",
    "validators",
    "wordcloud",
]
